ingress/ingress-nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo
  labels:
    app: demo
spec:
  type: ClusterIP
  selector:
    app: demo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
